--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 <body>
 	<div class="w-all">
 		<p><img class=" " style="" src="http://oa.danzi.cn:8089/page/resource/userfile/image/Logo1.png"></p>
-		<div><a href="file://10.52.13.83/E01%20%E5%85%B1%E4%BA%AB%E6%96%87%E4%BB%B6/05%20%E5%89%8D%E7%AB%AF%E5%BC%80%E5%8F%91/index.html">进入</a></div>
+		<div><a href="//10.52.13.83/e01 共享文件/">进入</a></div>
 	</div>
 </body>
 </html>
