--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 <body>
 	<div class="w-all">
 		<p><img class=" " style="" src="http://oa.danzi.cn:8089/page/resource/userfile/image/Logo1.png"></p>
-		<div><a href="//10.52.13.83/e01 共享文件/">进入</a></div>
+		<div><a href="//10.52.13.83/E01 共享文件/05 前端开发/index.html">进入</a></div>
 	</div>
 </body>
 </html>
